--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,10 @@
 				<artifactId>jib-maven-plugin</artifactId>
 				<version>0.9.6</version>
 				<configuration>
+					<from>
+					    <!--base image-->
+					    <image>hub.docker.com/openjdk:alpine</image>
+					</from>
 					<to>
 						<image>10.4.34.25/leiguorui/spring-jib:${project.version}</image>
 					</to>
