--- a/pom.xml
+++ b/pom.xml
@@ -57,7 +57,7 @@
 					    <image>hub.docker.com/openjdk:alpine</image>
 					</from>
 					<to>
-						<image>10.4.34.25/leiguorui/spring-jib:${project.version}</image>
+						<image>10.4.34.25:5000/leiguorui/spring-jib:${project.version}</image>
 					</to>
 					<container>
 						<ports>
